# sequence-learning

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  delete.me  deleteme.txt  hello.ben  notes.org  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dev_pytest.yml  main_pytest.yml  pytest.yaml
docs/: readme.txt
docs/source/: conf.py  elise.rst  index.rst  modules.rst
scripts/: config.toml  experiment.py  fuer_elise_short.txt  install_jax.sh  lib_benchmark.py  lib_benchmark_2.py  lib_benchmark_env.yaml  plotting.py  readme.txt  requirements.txt  sim_playground.py  sim_playgroung.py
scripts/mlflow/: .gitignore  dummy_analysis.py  dummy_ex.py
scripts/planning/: ideas.md
scripts/sacred/: .gitignore  dummy_analysis_fs.py  dummy_ex.py  dummy_sim.py
src/elise/: buffer.py  config.py  config.toml  data.py  dataloader.py  delete.me  logger.py  main.py  model.py  optimizer.py  rate_buffer.py  ratebuffer.py  simulator.py  stats.py  tracker.py  weights.py
src/seqlearn/: functional.py
tests/: conftest.py  example_experiment.py  experiment_smoketest.py  readme.txt  smoketest_config.toml  test_buffer.py  test_data.py  test_delays.py  test_dendritic_weights.py  test_development.py  test_gh_actions.py  test_model_equations.py  test_scripts.py  test_smoketest.py  test_somatic_weights.py  test_stats.py
