# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elise"  # TODO change name, and also the folder name in src/seqlearn
version = "0.2.0"
description = "Implementation of the sequence learning model by Kriener et al., 2024"
readme = "README.md"
authors =[
        { name = "Timo Gierlich", email = "timo.gierlich@unibe.ch" },
        { name = "Ben von Huenerbein", email = "ben.vonhuenerbein@unibe.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT Licence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [  # TODO: add
    "numpy >= 1.24",
    "matplotlib >= 3.7",
    "numba",
    "scipy",
    "tqdm",
]
requires-python = ">=3.9"

[tool.isort]
profile = "black"

[mypy]
plugins = "numpy.typing.mypy_plugin"

[project.urls]
Homepage = "https://github.com/TODO"
Issues = "https://github.com/TODO"
